--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "shopify-frontend-challenge-2022",
+  "homepage": "https://jordanmosakowski.github.io/shopify-frontend-challenge-2022/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
