--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -26,7 +26,7 @@ jobs:
       run: npm ci
     
     - name: Build project
-      run: npm run build
+      run: CI=false npm run build
 
     - name: Upload production-ready build files
       uses: actions/upload-artifact@v2
